--- a/tests/integration/targets/latest/tasks/netbox_inventory_item.yml
+++ b/tests/integration/targets/latest/tasks/netbox_inventory_item.yml
@@ -54,6 +54,7 @@
       serial: "1234"
       asset_tag: "1234"
       description: "New SFP"
+      discovered: True
       tags:
         - Schnozzberry
     state: present
@@ -69,6 +70,7 @@
       - test_three['diff']['after']['manufacturer'] == 1
       - test_three['diff']['after']['part_id'] == "10G-SFP+"
       - test_three['diff']['after']['tags'][0] == "Schnozzberry"
+      - test_three['diff']['after']['discovered'] == True
       - test_three['inventory_item']['name'] == "10G-SFP+"
       - test_three['inventory_item']['device'] == 1
       - test_three['inventory_item']['asset_tag'] == "1234"
@@ -77,33 +79,10 @@
       - test_three['inventory_item']['manufacturer'] == 1
       - test_three['inventory_item']['part_id'] == "10G-SFP+"
       - test_three['inventory_item']['tags'][0] == "Schnozzberry"
+      - test_three['inventory_item']['discovered'] == True
       - test_three['msg'] == "inventory_item 10G-SFP+ updated"
 
-- name: "INVENTORY_ITEM 4: Same name and device, but different serial number"
-  netbox.netbox.netbox_inventory_item:
-    netbox_url: http://localhost:32768
-    netbox_token: 0123456789abcdef0123456789abcdef01234567
-    data:
-      device: "test100"
-      name: "10G-SFP+"
-      serial: "FXS12345"
-      discovered: True
-    state: present
-  register: test_four
-
-- name: "INVENTORY_ITEM 4: ASSERT - Necessary info creation"
-  assert:
-    that:
-      - test_four is changed
-      - test_four['diff']['before']['state'] == "absent"
-      - test_four['diff']['after']['state'] == "present"
-      - test_four['inventory_item']['name'] == "10G-SFP+"
-      - test_four['inventory_item']['device'] == 1
-      - test_four['inventory_item']['serial'] == "FXS12345"
-      - test_four['inventory_item']['discovered'] == True
-      - test_four['msg'] == "inventory_item 10G-SFP+ created"
-
-- name: "INVENTORY_ITEM 5: ASSERT - Delete"
+- name: "INVENTORY_ITEM 4: ASSERT - Delete"
   netbox.netbox.netbox_inventory_item:
     netbox_url: http://localhost:32768
     netbox_token: 0123456789abcdef0123456789abcdef01234567
@@ -111,18 +90,18 @@
       device: "test100"
       name: "10G-SFP+"
     state: absent
-  register: test_five
+  register: test_four
 
-- name: "INVENTORY_ITEM 5: ASSERT - Delete"
+- name: "INVENTORY_ITEM 4: ASSERT - Delete"
   assert:
     that:
-      - test_five is changed
-      - test_five['inventory_item']['name'] == "10G-SFP+"
-      - test_five['inventory_item']['device'] == 1
-      - test_five['inventory_item']['asset_tag'] == "1234"
-      - test_five['inventory_item']['serial'] == "1234"
-      - test_five['inventory_item']['description'] == "New SFP"
-      - test_five['inventory_item']['manufacturer'] == 1
-      - test_five['inventory_item']['part_id'] == "10G-SFP+"
-      - test_five['inventory_item']['tags'][0] == "Schnozzberry"
-      - test_five['msg'] == "inventory_item 10G-SFP+ deleted"
+      - test_four is changed
+      - test_four['inventory_item']['name'] == "10G-SFP+"
+      - test_four['inventory_item']['device'] == 1
+      - test_four['inventory_item']['asset_tag'] == "1234"
+      - test_four['inventory_item']['serial'] == "1234"
+      - test_four['inventory_item']['description'] == "New SFP"
+      - test_four['inventory_item']['manufacturer'] == 1
+      - test_four['inventory_item']['part_id'] == "10G-SFP+"
+      - test_four['inventory_item']['tags'][0] == "Schnozzberry"
+      - test_four['msg'] == "inventory_item 10G-SFP+ deleted"
