--- a/tests/integration/targets/v3.4/tasks/netbox_l2vpn.yml
+++ b/tests/integration/targets/v3.4/tasks/netbox_l2vpn.yml
@@ -49,7 +49,7 @@
     data:
       name: "Test L2VPN"
       type: vxlan
-      tenant: "Test Tenant"
+      tenant: 1
       description: Updated description
       import_targets:
         - "4000:4000"
