--- a/tests/integration/targets/v3.6/tasks/netbox_route_target.yml
+++ b/tests/integration/targets/v3.6/tasks/netbox_route_target.yml
@@ -7,7 +7,7 @@
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
       name: "65000:65001"
-      tenant: "Test Tenant"
+      tenant: 1
       tags:
         - first
         - second
@@ -32,7 +32,7 @@
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
       name: "65000:65001"
-      tenant: "Test Tenant"
+      tenant: 1
       tags:
         - first
         - second
@@ -56,7 +56,7 @@
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
       name: "65000:65001"
-      tenant: "Test Tenant"
+      tenant: 1
       tags:
         - first
         - second
@@ -80,7 +80,7 @@
     data:
       name: "65000:65001"
       description: "NEW DESCRIPTION"
-      tenant: "Test Tenant"
+      tenant: 1
       tags:
         - first
         - second
@@ -106,7 +106,7 @@
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
       name: "65000:65001"
-      tenant: "Test Tenant"
+      tenant: 1
       description: "NEW DESCRIPTION"
       tags:
         - first
@@ -132,7 +132,7 @@
     netbox_token: 0123456789abcdef0123456789abcdef01234567
     data:
       name: "65000:65001"
-      tenant: "Test Tenant"
+      tenant: 1
       description: "NEW DESCRIPTION"
       tags:
         - first
